--- a/011/011.html
+++ b/011/011.html
@@ -8,20 +8,18 @@
 
     <body>
         <h3>Date of Issued :2022/12/20</h3>
-        <h3>Subject : AMD EPYC™ プロセッサー技術詳細「I/Oダイと’Zen4'コア」<br>
+        <h3>Subject : AMD EPYC™ プロセッサー技術詳細「ハイブリッドマルチダイアーキテクチャー後編と’Zen4'コア」<br>
         <h3>Message Contents :</h3>
         <hr width="100%" color="green" size="1px"/>
         <p class="main-text">
             <div class="box-mail">
-                前回は、AMD EPYC™ プロセッサーのマルチダイアーキテクチャーについてを紹介させていただきました。今回は、2回目として継続してI/Oの詳説および「’Zen4’コアの詳説」について説明をさせていただきます。<br>
-                <br>
-                マルチダイアーキテクチャーとしてI/Oダイ<br>
+                前回は、AMD EPYC™ プロセッサーのマルチダイアーキテクチャーについてを紹介させていただきました。今回は、その後編としてI/Oダイとインフィニティアーキテクチャー概要、および「’Zen4’コアの詳説」について説明をさせていただきます。<br>
                 <br>
                 I/Oダイにおけるイノベーション：<br>
-                I/OダイもCPUと並行した同様のイノベーションがあります。EPYC 9004では、PCIe® Gen 5 機能をI/Oダイへ実装を実施することで、前シリーズからI/O帯域幅を2倍にしました。また、I/O帯域幅を2倍にするだけでは満足できず、サーバー設計時にI/Oサブシステムを柔軟に割り当てることができる特定の機能として、AMD Infinity Fabric™インターコネクト、SATAディスクコントローラ、およびび Compute Express　Link(CXL™) 1.1+ メモリコントローラをサポートしました。I/OダイはAMD Infinity Guard機能セットの一部であるさまざまなメモリ暗号化メカニズムを管理する、専用のセキュリティプロセッサがメモリコントローラの近くに配置されています。 <br>
+                I/OダイもCPUと並行した同様のイノベーションがあります。EPYC 9004では、PCIe® Gen 5 機能をI/Oダイへ実装することで、前シリーズからI/O帯域幅を2倍にしました。また、I/O帯域幅を2倍にするだけでは満足できず、サーバー設計時にI/Oサブシステムを柔軟に割り当てることができる機能として、AMD Infinity Fabric™インターコネクト、SATAディスクコントローラ、およびび Compute Express　Link(CXL™) 1.1+ メモリコントローラをサポートしました。I/OダイはAMD Infinity Guard機能セットの一部であるさまざまなメモリ暗号化メカニズムを管理する、専用のセキュリティプロセッサがメモリコントローラとタイトに配置されています。 <br>
                 <br>
                 AMDインフィニティアーキテクチャー：<br>
-                Hybrid, Multi-Chip Architectureに基づくプロセッサの設計する場合、相互接続のパフォーマンスが最も重要です。AMDインフィニティアーキテクチャの核心は、並外れたレベルの規模をサポートする相互接続、すべてのレイヤーにおけるリーダーシップです。 各コンポーネントは、AMD Infinity Fabricテクノロジを使用して通信します。これは、CPU間、マルチチップアーキテクチャのコンポーネント間で使用される接続であり、「Zen 4」プロセッサ コア、メモリ、PCIe® Gen 5 I/O、およびセキュリティメカニズムを相互に接続するために使用されます。 その結果、このアーキテクチャは画期的なパフォーマンスと効率を実現し、次世代コンピューティングへの継続を果たします。<br>
+                Hybrid Multi-Chip Architectureに基づくプロセッサの設計する場合、相互接続のパフォーマンスが最も重要です。AMDインフィニティアーキテクチャの核心は、並外れた規模レベルをサポートする相互接続、すべてのレイヤーにおけるリーダーシップです。 各コンポーネントは、AMD Infinity Fabricテクノロジを使用して通信します。これは、CPU間、マルチチップアーキテクチャのコンポーネント間で使用される接続であり、「Zen 4」プロセッサ コア、メモリ、PCIe® Gen 5 I/O、およびセキュリティメカニズムを相互に接続するために使用されます。 その結果、このアーキテクチャは画期的なパフォーマンスと効率を実現し、次世代コンピューティングへの継続を果たします。<br>
                 <br>
                 ’Zen4'コアの詳細<br>
                 <br>
