--- a/011/011.html
+++ b/011/011.html
@@ -31,6 +31,9 @@
                 新規命令セットの導入:<br>
                 「Zen 4」コアには、人工知能、機械学習、高性能コンピューティングワークロードが進化するように設計された新しい命令が導入されています。完全なAVX-512 命令セットは、業界標準に適合するように実装されています。 これらにはBFLOAT16 およびベクトル化されたニューラルネットワーク命令 (VNNI)が含まれます。これら重いデータ処理命令の実装は、AVX-512を機能するようにコーディングされたアプリケーションの変更なく動作できます。 これらのアプローチは、CPUを介するパスと同じ256ビットデータパスを使用し、それら2つの部分がシーケンシャルなクロックサイクルで実行できるようにします。 結果、熱負荷を管理するためにCPUクロックを調整する必要がないことを意味します。CXLコントローラを介したしたメモリ拡張の可能性は、仮想メモリは57Bitでアドレス指定できるようになり、これをサポートするためにネストされた第５レベルのページテーブルが実装されました。<br>
                 <br>
+                セキュリティへの拡張<br>
+                セキュリティについて、以前からの各「Zen」コア世代は、既知アプリケーションに変更を加える必要のない緩和策が組み込まれています。前世代「Zen」コアは、プロセッサキャッシュが一度読み取られたメモリへのタグ付けが原因である、サイドチャネル攻撃に耐性があります。これはスレッドが、実行中に別のスレッドのデータを表示できる事を最小化できます。「Zen 4」コアでは、仮想化環境でのゲストオペレーティングシステムを１つのコアで排他的に実行する機能を導入しました。これにより、キャッシュメモリを標的としたサイドチャネル攻撃からの保護に役立つソリューションがさらに導入されました。仮想化環境の新しい機能サポートには、セキュアマルチキー暗号化 (SMKE) が含まれます。これにより、ハイパーバイザーはCXL接続メモリのアドレス空間範囲を選択的に暗号化できます。 SMKEで暗号化されたメモリは、再起動後もCPUからアクセスできます。既存のソフトウェア暗号化フレームワークは、デバイスの実装に関係なく、CXL 接続メモリとシームレスに連携します。<br>
+                <br>
             </div>
             <div class="box-img">
                 <img src="./core_complex.jpg" alt="Image File"><br>
