--- a/012/012.html
+++ b/012/012.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h3>Date of Issued :2022/</h3>
+        <h3>Date of Issued :2023/01/17</h3>
         <h3>Subject : AMD EPYC™ プロセッサー技術詳細「EPYCはシステム・オン・チップ」<br>
         <h3>Message Contents :</h3>
         <hr width="100%" color="green" size="1px"/>
