--- a/016/n16-ibase.html
+++ b/016/n16-ibase.html
@@ -43,7 +43,7 @@
                 <tr>
                     <td><a href="./Issue-016/ET977_Datasheet.pdf" class="link-button">ET977</a></td>
                     <td><img src="./Issue-016/ET977-PDF.jpg" alt="PDF File Image"</td>
-                    <td>V2000搭載ComEpress Type6システムオンコンピュータモジュール</td>
+                    <td>V1000/R2000搭載ComEpress Type6システムオンコンピュータモジュール</td>
                 </tr>
             </table>
         <hr width="100%" color="blue" size="5px"/>
