--- a/016/n16-ibase.html
+++ b/016/n16-ibase.html
@@ -13,7 +13,7 @@
     <body>
         <div class="box">
             <div class="box-logo">
-                <img src="181206LOGO_01.jpg" width="60" height="60" alt="Shinden's logo">
+                <img src="../181206LOGO_01.jpg" width="60" height="60" alt="Shinden's logo">
             </div>
             <div class="box-title">
                 <h1>Welcome to Shinden Document Services Site.</h1>
@@ -31,18 +31,18 @@
                     <td>製品名</td><td>資料イメージ</td><td>説明</td>
                 </tr>
                 <tr>
-                    <td><a href="./Issue-016/MI993_Datasheet.pdf" class="link-button">MI993</a></td>
-                    <td><img src="./Issue-016/MI993-PDF.jpg" alt="PDF File Image"></td>
+                    <td><a href="./MI993_Datasheet.pdf" class="link-button">MI993</a></td>
+                    <td><img src="./MI993-PDF.jpg" alt="PDF File Image"></td>
                     <td>R2000搭載mini-ITX対応産業用マザーボード</td>
                 </tr>
                 <tr>
-                    <td><a href="./Issue-016/IB952_Datasheet.pdf" class="link-button">MB952</a></td>
-                    <td><img src="./Issue-016/IB952-PDF.jpg" alt="PDF File Image"</td>
+                    <td><a href="./IB952_Datasheet.pdf" class="link-button">MB952</a></td>
+                    <td><img src="./IB952-PDF.jpg" alt="PDF File Image"</td>
                     <td>V2000搭載産業用３．５インチシングルボードコンピュータ</td>
                 </tr>
                 <tr>
-                    <td><a href="./Issue-016/ET977_Datasheet.pdf" class="link-button">ET977</a></td>
-                    <td><img src="./Issue-016/ET977-PDF.jpg" alt="PDF File Image"</td>
+                    <td><a href="./ET977_Datasheet.pdf" class="link-button">ET977</a></td>
+                    <td><img src="./ET977-PDF.jpg" alt="PDF File Image"</td>
                     <td>V1000/R2000搭載ComEpress Type6システムオンコンピュータモジュール</td>
                 </tr>
             </table>
